crates/forge_app/src/snapshots/forge_app__compact__tests__multi_round_evolution.snap
---
source: crates/forge_app/src/compact.rs
expression: rounds
---
- - request 1
  - - "[System] Message 1"
    - "[Assistant] Message 2"
    - "[User] Message 3"
- - request 2
  - - "[System] Message 1"
    - "[Assistant] Message 2"
    - "[User] Message 3"
    - "[Assistant] Message 4"
    - "[User] Message 5"
- - request 3
  - - "[System] Message 1"
    - "[Assistant] Message 2"
    - "[User] Message 3"
    - "[Assistant] Message 4"
    - "[User] Message 5"
    - "[Assistant] Message 6"
    - "[User] Message 7"
- - request 4
  - - "[System] Message 1"
    - "[Assistant] Message 2"
    - "[User] Message 3"
    - "[Assistant] Message 4"
    - "[User] Message 5"
    - "[Assistant] Message 6"
    - "[User] Message 7"
    - "[Assistant] Message 8"
    - "[User] Message 9"
- - request 5
  - - "[System] Message 1"
    - "[Compacted]"
    - "[User] Message 9"
    - "[Assistant] Message 10"
    - "[User] Message 11"
- - request 6
  - - "[System] Message 1"
    - "[Compacted]"
    - "[User] Message 9"
    - "[Assistant] Message 10"
    - "[User] Message 11"
    - "[Assistant] Message 12"
    - "[User] Message 13"
- - request 7
  - - "[System] Message 1"
    - "[Compacted]"
    - "[User] Message 9"
    - "[Assistant] Message 10"
    - "[User] Message 11"
    - "[Assistant] Message 12"
    - "[User] Message 13"
    - "[Assistant] Message 14"
    - "[User] Message 15"
- - request 8
  - - "[System] Message 1"
    - "[Compacted]"
    - "[User] Message 9"
    - "[Compacted]"
    - "[Assistant] Message 16"
    - "[User] Message 17"
