crates/forge_app/src/snapshots/forge_app__compact__tests__template_engine_renders_background_shell.snap
---
source: crates/forge_app/src/compact.rs
expression: actual
---
Use the following summary frames as the authoritative reference for all coding suggestions and decisions. Do not re-explain or revisit it unless I ask. Additional summary frames will be added as the conversation progresses.

## Summary

### 1. User

````
Start the dev server
````

### 2. Assistant

**Execute:** 
```
npm start
```
**Background Process:** PID=12345, Log=`/tmp/forge-bg-npm-start.log`


---

Proceed with implementation based on this context.
