crates/forge_app/src/snapshots/forge_app__compact__tests__template_engine_renders_todo_write.snap
---
source: crates/forge_app/src/compact.rs
expression: actual
---
Use the following summary frames as the authoritative reference for all coding suggestions and decisions. Do not re-explain or revisit it unless I ask. Additional summary frames will be added as the conversation progresses.

## Summary

### 1. User

````
Create a task plan
````

### 2. Assistant

**Task Plan:**
- [x] ~~Implement user authentication~~
- [~] Add database migrations
- [ ] Write documentation


---

Proceed with implementation based on this context.
